@@ -378,6 +378,11 @@ Bug Fixes
 * SOLR-5618: Fix false cache hits in queryResultCache when hashCodes are equal 
   and duplicate filter queries exist in one of the requests (hossman)
 
+* SOLR-4260: ConcurrentUpdateSolrServer#blockUntilFinished can return before
+  all previously added updates have finished. This could cause distributed
+  updates meant for replicas to be lost. (Markus Jelsma, Timothy Potter,
+  Joel Bernstein)
+
 Optimizations
 ----------------------  
 
